--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
   <header>
-    <h1>🇮🇪 Ireland Weather</h1>
+    <h1>🇮🇪 Ireland Weather11</h1>
     <p>Stay updated with the latest weather conditions across Ireland</p>
   </header>
 
