--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ireland Weather new onekdsfjlks</title>
+  <title>Ireland Weather new</title>
   <style>
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -52,20 +52,20 @@
 </head>
 <body>
   <header>
-    <h1>🇮🇪 Ireland Weather11</h1>
+    <h1>🇮🇪 Ireland Weather</h1>
     <p>Stay updated with the latest weather conditions across Ireland</p>
   </header>
 
   <div class="weather-container">
     <div class="city">Dublin</div>
-    <div class="temperature">12°C</div>
+    <div class="temperature">9°C</div>
     <div class="condition">Partly Cloudy</div>
     <p>Humidity: 75% | Wind: 18 km/h</p>
   </div>
 
   <div class="weather-container">
     <div class="city">Cork</div>
-    <div class="temperature">10°C</div>
+    <div class="temperature">18°C</div>
     <div class="condition">Light Rain</div>
     <p>Humidity: 80% | Wind: 22 km/h</p>
   </div>
