--- a/app/index.html
+++ b/app/index.html
@@ -58,14 +58,14 @@
 
   <div class="weather-container">
     <div class="city">Dublin</div>
-    <div class="temperature">9°C</div>
+    <div class="temperature">25°C</div>
     <div class="condition">Partly Cloudy</div>
     <p>Humidity: 75% | Wind: 18 km/h</p>
   </div>
 
   <div class="weather-container">
     <div class="city">Cork</div>
-    <div class="temperature">18°C</div>
+    <div class="temperature"30°C</div>
     <div class="condition">Light Rain</div>
     <p>Humidity: 80% | Wind: 22 km/h</p>
   </div>
